--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <div class="container">
             <div class="card">
-                <h2>Hey Cantik! 💕</h2>
+                <h2>Halo Cantik! 💕</h2>
                 <p>
                     Aku tau kamu sedang ada di masa masa sulit, tapi aku selalu
                     di sini untuk kamu. Aku udah siapin beberapa hal khusus buat
