--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <div id="gift-link-1" class="hidden">
                         <p>Here's something special for you!</p>
                         <a
-                            href="https://app.gopay.co.id/NF8p/q9biahj2"
+                            href="https://app.gopay.co.id/NF8p/8gssuuth"
                             class="reward-link"
                             target="_blank"
                             >Claim Gift #1</a
@@ -151,7 +151,7 @@
                     <div id="gift-link-2" class="hidden">
                         <p>Another surprise just for you!</p>
                         <a
-                            href="https://app.gopay.co.id/NF8p/q9biahj2"
+                            href="https://app.gopay.co.id/NF8p/jo74k64r"
                             class="reward-link"
                             target="_blank"
                             >Claim Gift #2</a
@@ -162,7 +162,7 @@
                     <div id="gift-link-3" class="hidden">
                         <p>One more thing to make you smile!</p>
                         <a
-                            href="https://app.gopay.co.id/NF8p/q9biahj2"
+                            href="https://app.gopay.co.id/NF8p/jbnd8rab"
                             class="reward-link"
                             target="_blank"
                             >Claim Gift #3</a
